--- a/WpfApp4 {Image Work}/MainWindow.xaml
+++ b/WpfApp4 {Image Work}/MainWindow.xaml
@@ -7,23 +7,25 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="530" Width="400">
     <Grid>
-        <Image x:Name="ImageView" HorizontalAlignment="Left" Height="210" Margin="40,30,0,0" VerticalAlignment="Top" Width="310"/>
+        <Image x:Name="ImageView"  HorizontalAlignment="Left" Height="210" Margin="40,30,0,0" VerticalAlignment="Top" Width="310"/>
         <GroupBox x:Name="grbConvert" Padding="5" Margin="0,260,0,65" Height="100">
                 <GroupBox.Header>
                     <Button Background="Lavender">Выбрать размер</Button>
                 </GroupBox.Header>
            
             <StackPanel Margin="0,0,0,0" Height="70">
-                <RadioButton IsChecked="True" Margin="-280,10,0,0" Width="50">50</RadioButton>
-                <RadioButton Margin="-150,-15,0,0" Width="50">100</RadioButton>
-                <RadioButton Margin="-20,-15,0,0" Width="50">300</RadioButton>
-                <RadioButton Margin="110,-15,0,0" Width="50">600</RadioButton>
-                <RadioButton Margin="240,-15,0,0" Width="50">1280</RadioButton>
-                <Button x:Name="btn_Convert" Background="Chartreuse" Content="Конвертировать" Margin="247,10,15,0" Height="30"/>
+                <RadioButton GroupName="SizeImg" IsChecked="True" Margin="-280,10,0,0" Width="50" Content="50"/>
+                <RadioButton GroupName="SizeImg" Margin="-150,-15,0,0" Width="50" Content="100"/>
+                <RadioButton GroupName="SizeImg" Margin="-20,-15,0,0" Width="50" Content="300"/>
+                <RadioButton GroupName="SizeImg" Margin="110,-15,0,0" Width="50" Content="600"/>
+                <RadioButton GroupName="SizeImg" Margin="240,-15,0,0" Width="50" Content="1280"/>
+                <Button x:Name="btn_Convert" Background="Chartreuse" Content="Конвертировать" Margin="247,10,15,0" Height="30" Click="Btn_Convert_Click"/>
             </StackPanel>
             
             </GroupBox>
-            <Label x:Name="lblSize"   Content="Исходный размер: " HorizontalAlignment="Left" Margin="50,245,0,0" VerticalAlignment="Top" Width="300" FontWeight="Bold" FontStyle="Italic" AutomationProperties.IsRowHeader="True" FontSize="16"/>
+        <Label x:Name="lblSize"   Content="Исходный размер: " HorizontalAlignment="Left" Margin="50,245,0,0" 
+                   VerticalAlignment="Top" Width="300" FontWeight="Bold" FontStyle="Italic" 
+                   AutomationProperties.IsRowHeader="True" FontSize="16"/>
         
             <Button x:Name="btnSelectImage" Content="Выберите фото" HorizontalAlignment="Left" Margin="106,420,0,0" VerticalAlignment="Top" Width="165" Height="50" FontWeight="Bold" FontSize="20" FontFamily="Sitka Display" Click="BtnSelectImage_Click"/>
        
