--- a/WpfApp4 {Image Work}/MainWindow.xaml
+++ b/WpfApp4 {Image Work}/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="530" Width="400">
     <Grid>
         <Image x:Name="ImageView"  HorizontalAlignment="Left" Height="210" Margin="40,30,0,0" VerticalAlignment="Top" Width="310"/>
-        <GroupBox x:Name="grbConvert" Padding="5" Margin="0,260,0,65" Height="100">
+        <GroupBox x:Name="grbConvert" Padding="5" Margin="0,260,0,65" Height="100" Visibility="Hidden" > 
                 <GroupBox.Header>
                     <Button Background="Lavender">Выбрать размер</Button>
                 </GroupBox.Header>
@@ -25,7 +25,7 @@
         </GroupBox>
         <Label x:Name="lblSize"   Content="Исходный размер: " HorizontalAlignment="Left" Margin="50,245,0,0" 
                    VerticalAlignment="Top" Width="300" FontWeight="Bold" FontStyle="Italic" 
-                   AutomationProperties.IsRowHeader="True" FontSize="16"/>
+                   AutomationProperties.IsRowHeader="True" FontSize="16" Visibility="Hidden"/>
         <Button x:Name="btnSelectImage" Content="Выберите фото" HorizontalAlignment="Left" Margin="106,420,0,0" VerticalAlignment="Top" Width="165" Height="50" FontWeight="Bold" FontSize="20" FontFamily="Sitka Display" Click="BtnSelectImage_Click"/>
     </Grid>
 </Window>
